[tool.poetry]
name = "zeromq"
version = "0.1.0"
description = ""
authors = ["matthewkinnear <mattmkinn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pyzmq = "^25.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
